--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 /* src/index.css */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Open+Sans:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css');
 
 @tailwind base;
@@ -22,11 +22,24 @@
 
 /* === Base Styles === */
 body {
-  @apply font-sans antialiased text-gray-800 bg-white overflow-x-hidden;
+  @apply font-poppins antialiased text-gray-800 bg-white overflow-x-hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
   @apply font-montserrat;
+}
+
+/* Custom Font Classes */
+.font-script {
+  font-family: 'Pacifico', cursive;
+}
+
+.font-montserrat {
+  font-family: 'Montserrat', sans-serif;
+}
+
+.font-poppins {
+  font-family: 'Poppins', sans-serif;
 }
 
 /* === Divider (GGCC Style: dotted, steel blue, partial width) === */
